# betterhtmlchunking

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tests.yml
betterhtmlchunking/: cli.py  main.py  render_system.py  tree_regions_system.py  tree_representation.py  utils.py
tests/: README.md  test_chunking_pipeline.py  test_cli.py  test_main.py  test_render_system.py  test_roi_limits.py  test_root_selection.py  test_tree_representation.py  test_utils.py
