[tool.uv]
package = true

[options]
package_dir = "betterhtmlchunking"
packages = ["betterhtmlchunking"]

[project]
name = "betterhtmlchunking"
version = "0.9.4"
authors = [
    { name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com" }
]
requires-python = ">=3.12"
description = "A Python library for intelligent HTML segmentation and ROI extraction. It builds a DOM tree from raw HTML and extracts content-rich regions for efficient web scraping and analysis."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]
license = { text = "MIT License" }
keywords = ["html", "chunking", "scraping", "dom", "roi", "content extraction", "web-scraping"]
readme = "README.md"
dependencies = [
    "attrs",
    "attrs-strict",
    "beautifulsoup4",
    "lxml",
    "treelib",
    "parsel_text",
    "typer",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
betterhtmlchunking = "betterhtmlchunking.cli:app"

[project.urls]
repository = "https://github.com/carlosplanchon/betterhtmlchunking.git"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "prettyprinter>=0.18.0",
]
